--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,125 @@
-h1 {
+body {
+  background-color: white;
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url(../img/costa-rica-welcome.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: center;
+  padding: 200px 0;
+
+}
+
+header h1 {
   font-family: "Montserrat", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
   font-size: 96px;
+  line-height: 1.5;
+  margin: 0;
+}
+header h2 {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1.5;
+  margin-bottom: 40px;
+  margin: 0;
+}
+header h3 {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 4px;
+  margin: 0;
+}
+header a {
+  display: inline-block;
+  text-decoration: none;
+  background-color: ;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.5;
+  padding: 16px 32px;
+  display: inline-block;
+  margin-top: 32px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+.glass {
+  position: relative;
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(2px) saturate(180%);
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 2rem;
+  box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2), inset 0 4px 20px rgba(255, 255, 255, 0.3);
+}
+.glass::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 2rem;
+  backdrop-filter: blur(1px);
+  box-shadow: inset -10px -8px 0px -11px rgba(255, 255, 255, 1), inset 0px -9px 0px -8px rgba(255, 255, 255, 1);
+  opacity: 0.6;
+  z-index: -1;
+  filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(115%);
+}
+.glass:hover {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px rgba(31, 38, 135, 0.3), inset 0 4px 20px rgba(255, 255, 255, 0.4);
+}
+.glass:hover::after {
+  opacity: 0.8;
+  filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(130%);
+} 
+
+
+@media (max-width: 768px) {
+  header {
+    padding: 180px 0;
+  }
+
+  header h1 {
+    font-size: 40px;
+  }
+
+  header h2 {
+    font-size: 20px;
+    margin: 10px;
+  }
+
+  header h3 {
+    font-size: 18px;
+    letter-spacing: 2px;
+  }
+
+  header a {
+    font-size: 16px;
+    padding: 12px 24px;
+    margin-top: 24px;
+  }
 }
