--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: white;
+  background-color: #3f314e;
 }
 
 .container {
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url(../img/costa-rica-welcome.png);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url(../img/costa-rica-welcome.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -97,8 +97,81 @@ header a {
   filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(130%);
 } 
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  gap: 20px;
+}
 
-@media (max-width: 768px) {
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+footer {
+  color: white;
+  background-image: linear-gradient(rgba(63, 49, 78, 0.9), rgba(63, 49, 78, 0.9)), url(../img/costa-rica-waterfall.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+
+footer h3{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 4px;
+  margin: 0;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer li{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
+  opacity: 0.7;
+  text-decoration: underline;
+  line-height: 2;
+}
+
+footer p {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.5;
+  opacity: 0.7;
+  margin-right: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 960px) {
   header {
     padding: 180px 0;
   }
