--- a/src/styles.css
+++ b/src/styles.css
@@ -97,15 +97,64 @@ header a {
   filter: blur(1px) drop-shadow(10px 4px 6px black) brightness(130%);
 } 
 
-.grid {
+.grid{
   display: grid;
+  gap: 64px;
+}
+.grid-3-col {
   grid-template-columns: 1fr 2fr 2fr;
-  gap: 20px;
+}
+.grid-2-col {
+  grid-template-columns: 1fr 1fr;
+
 }
 
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0px;
+}
+
+main {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.img-city-center{
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0 0;
+}
+main h2 {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  opacity: 0.3;
+  color: #272044;
+  text-transform: uppercase;
+  margin: 0;
+} 
+main h3 {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+} 
+main p {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
 }
 
 footer {
@@ -113,7 +162,6 @@ footer {
   background-image: linear-gradient(rgba(63, 49, 78, 0.9), rgba(63, 49, 78, 0.9)), url(../img/costa-rica-waterfall.png);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 100px 0;
 }
 
 footer h3{
@@ -151,25 +199,7 @@ footer p {
   font-size: 15px;
   line-height: 1.5;
   opacity: 0.7;
-  margin-right: 20px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @media (max-width: 960px) {
   header {
@@ -195,4 +225,29 @@ footer p {
     padding: 12px 24px;
     margin-top: 24px;
   }
+  .grid{
+  grid-template-columns: 1fr;
+  grid-gap: 32px;
+  padding: 20px 20px;
 }
+
+section {
+  padding: 30px 30px;
+}
+main h2{
+  font-size: 10px;
+  line-height: 2;
+  letter-spacing: 2px;
+}
+
+main h3 {
+  font-size: 20px;
+}
+
+main p{
+  font-size: 14px;
+  line-height: 1.5;
+}
+.footer-col-1 {
+margin-top: 20px;
+}}
