--- a/src/styles.css
+++ b/src/styles.css
@@ -106,9 +106,10 @@ header a {
 }
 .grid-2-col {
   grid-template-columns: 1fr 1fr;
-
 }
-
+.grid-3-equal-col {
+  grid-template-columns: 1fr 1fr 1fr;
+}
 section {
   max-width: 1200px;
   margin: 0 auto;
@@ -121,10 +122,11 @@ main {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.img-city-center{
+img{
   max-width: 100%;
   height: auto;
   border-radius: 8px 8px 0 0;
+  display: block;
 }
 main h2 {
   font-family: "Montserrat", sans-serif;
@@ -155,6 +157,86 @@ main p {
   line-height: 1.5;
   color: #272044;
   opacity: 0.7;
+}
+
+section.destinations {
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+} 
+section.destinations h2 {
+  text-align: center;
+  padding-bottom: 30px;
+}
+.card {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 30px 0;
+}
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+.card h2 {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  opacity: 0.3;
+  color: #272044;
+  text-transform: uppercase;
+  margin: 0;
+  padding-bottom: 30px;
+}
+.card h3 {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+  padding-bottom: 30px;
+}
+.card p {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
+}
+.card h5 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  color: #272044;
+}
+.learn-more-btn {
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  background-color: #3f314e;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+  padding: 16px 32px;
+  margin-top: 32px;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+.learn-more-btn:hover { 
+  background-color: #272044;
 }
 
 footer {
@@ -200,6 +282,15 @@ footer p {
   line-height: 1.5;
   opacity: 0.7;
 }
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 960px) {
   header {
