--- a/src/styles.css
+++ b/src/styles.css
@@ -123,9 +123,9 @@ main {
 }
 
 img{
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px 8px 0 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
   display: block;
 }
 main h2 {
@@ -168,6 +168,13 @@ section.destinations h2 {
   text-align: center;
   padding-bottom: 30px;
 }
+.embed{
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  border-radius: 8px;
+  display: block;
+}
 .card {
   background-color: white;
   border-radius: 8px;
@@ -175,6 +182,11 @@ section.destinations h2 {
   padding: 20px;
   margin: 30px 0;
 }
+.card-header.grid{
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0px;
+}
+
 .card-body {
   padding: 30px;
 }
@@ -283,15 +295,6 @@ footer p {
   opacity: 0.7;
 }
 
-
-
-
-
-
-
-
-
-
 @media (max-width: 960px) {
   header {
     padding: 180px 0;
@@ -339,6 +342,13 @@ main p{
   font-size: 14px;
   line-height: 1.5;
 }
+.card-header img {
+  display: none;
+}
+.embed {
+  aspect-ratio: 16 / 9;
+}
+
 .footer-col-1 {
 margin-top: 20px;
 }}
